hphp/test/slow/yield/throw/throw_already_closed.php.expectf
bool(false)

Fatal error: %s
Stack trace:
#0 %s/throw_already_closed.php(11): Generator->throw()
#1 {main}
